--- a/Marmalade/src/main/resources/styles/styles.css
+++ b/Marmalade/src/main/resources/styles/styles.css
@@ -2,6 +2,10 @@
  * Empty Stylesheet file.
  */
 
-.mainFxmlClass {
+.gameButton {
+    -fx-background-color: transparent;
+}
 
+.gameButton:hover {
+    -fx-background-color: #dae7f3;
 }
