--- a/Marmalade/src/main/resources/fxml/component/MainMenu.fxml
+++ b/Marmalade/src/main/resources/fxml/component/MainMenu.fxml
@@ -4,11 +4,11 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 
-
 <MenuBar fx:id="menu" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.bplaced.clayn.marmalade.ui.controller.MainMenuController">
   <menus>
     <Menu mnemonicParsing="false" text="%menu.file">
       <items>
+            <MenuItem mnemonicParsing="false" onAction="#onNewGame" text="%menu.new" />
         <MenuItem mnemonicParsing="false" onAction="#onExit" text="%menu.exit" />
       </items>
     </Menu>
