--- a/Marmalade/src/main/resources/fxml/component/GameDetails.fxml
+++ b/Marmalade/src/main/resources/fxml/component/GameDetails.fxml
@@ -31,9 +31,9 @@
       <TextArea fx:id="descriptionArea" prefHeight="75.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
       <TextField fx:id="nameField" GridPane.columnIndex="1" />
       <TextField fx:id="executableField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-      <Button fx:id="executableButton" mnemonicParsing="false" onAction="#chooseExec" text="Button" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+      <Button fx:id="executableButton" styleClass="gameButton" mnemonicParsing="false" onAction="#chooseExec" text="" GridPane.columnIndex="2" GridPane.rowIndex="2" />
       <TextField fx:id="imageField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-      <Button fx:id="imageButton" mnemonicParsing="false" onAction="#chooseImage" text="Button" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+      <Button fx:id="imageButton" styleClass="gameButton" mnemonicParsing="false" onAction="#chooseImage" text="" GridPane.columnIndex="2" GridPane.rowIndex="3" />
       <ImageView fx:id="image" fitHeight="64.0" fitWidth="64.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowSpan="2" GridPane.valignment="TOP" />
    </children>
    <padding>
